--- a/index.html
+++ b/index.html
@@ -15,19 +15,20 @@
       <img src="./images/logo_place_header.svg" alt="Логотип" class="logo logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
 
-      <h2 class="header__subtitle">
+      <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a href="#" class="header__link">Узнать →</a>
-      </h2>
+      </p>
       <div class="header__square-pic"></div>
       <img src="./images/header-image.png" alt="Иллюстрация" class="header__main-illustration">
     </header>
+    
     <main class="content">
       <section class="description">
         <div class="two-columns">
-          <h3 class="two-columns__brief">
+          <h2 class="two-columns__brief">
             Главные проблемы в обучении
-          </h3>
+          </h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">
               Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и
@@ -47,107 +48,108 @@
       </section>
 
       <section class="digits">
-        <h3 class="section-title">Цифры и факты</h3>
-        <h4 class="section-subtitle">Про учёбу и мозг</h4>
+        <h2 class="section-title">Цифры и факты</h2>
+        <p class="section-subtitle">Про учёбу и мозг</p>
         <ul class="table">
           <li class="table__cell">
-            <h5 class="table__heading">86 миллиардов</h5>
+            <h3 class="table__heading">86 миллиардов</h3>
             <p class="table__text">Число нейронов в мозге человека</p>
           </li>
           <li class="table__cell">
-            <h5 class="table__heading">2.1 миллиарда</h5>
+            <h3 class="table__heading">2.1 миллиарда</h3>
             <p class="table__text">Число нуждающихся в повышении квалификации</p>
             <p class="table__text">Всемирный Банк, 2017</p>
           </li>
           <li class="table__cell">
-            <h5 class="table__heading">1000 терабайт</h5>
+            <h3 class="table__heading">1000 терабайт</h3>
             <p class="table__text">Объём памяти человека</p>
           </li>
           <li class="table__cell">
-            <h5 class="table__heading">500 триллионов</h5>
+            <h3 class="table__heading">500 триллионов</h3>
             <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </li>
           <li class="table__cell">
-            <h5 class="table__heading">420 миллионов</h5>
+            <h3 class="table__heading">420 миллионов</h3>
             <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
             <p class="table__text">Всемирный Банк, 2017</p>
           </li>
           <li class="table__cell">
-            <h5 class="table__heading">17–20 лет</h5>
+            <h3 class="table__heading">17–20 лет</h3>
             <p class="table__text">Пик обучаемости</p>
           </li>
           <li class="table__cell">
-            <h5 class="table__heading">1885 год</h5>
+            <h3 class="table__heading">1885 год</h3>
             <p class="table__text">Открытие кривой забывания</p>
           </li>
           <li class="table__cell">
-            <h5 class="table__heading">1889 год</h5>
+            <h3 class="table__heading">1889 год</h3>
             <p class="table__text">Открытие условного рефлекса</p>
           </li>
         </ul>
       </section>
 
       <section class="feynman">
-        <h3 class="feynman__title">Метод Фейнмана</h3>
+        <h2 class="feynman__title">Метод Фейнмана</h2>
         <h4 class="feynman__subtitle">Выучить и не забыть.</h4>
         <a href="#" class="feynman__link">Подробнее →</a>
         <img src="./images/feynman.png" alt="Изображение Фейнмана" class="feynman__image">
       </section>
 
       <section class="kaufman">
-        <h3 class="section-title section-title_theme_dark">Принципы обучения</h3>
-        <h4 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h4>
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
-            <h5 class="table__heading table__heading_theme_dark">1</h5>
+            <h3 class="table__heading table__heading_theme_dark">1</h3>
             <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h5 class="table__heading table__heading_theme_dark">2</h5>
+            <h3 class="table__heading table__heading_theme_dark">2</h3>
             <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h5 class="table__heading table__heading_theme_dark">3</h5>
+            <h3 class="table__heading table__heading_theme_dark">3</h3>
             <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h5 class="table__heading table__heading_theme_dark">4</h5>
+            <h3 class="table__heading table__heading_theme_dark">4</h3>
             <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h5 class="table__heading table__heading_theme_dark">5</h5>
+            <h3 class="table__heading table__heading_theme_dark">5</h3>
             <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h5 class="table__heading table__heading_theme_dark">6</h5>
+            <h3 class="table__heading table__heading_theme_dark">6</h3>
             <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h5 class="table__heading table__heading_theme_dark">7</h5>
+            <h3 class="table__heading table__heading_theme_dark">7</h3>
             <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h5 class="table__heading table__heading_theme_dark">8</h5>
+            <h3 class="table__heading table__heading_theme_dark">8</h3>
             <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h5 class="table__heading table__heading_theme_dark">9</h5>
+            <h3 class="table__heading table__heading_theme_dark">9</h3>
             <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.
             </p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h5 class="table__heading table__heading_theme_dark">10</h5>
+            <h3 class="table__heading table__heading_theme_dark">10</h3>
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
         <img src="./images/kaufman-triangle.svg" alt="Треугольник" class="kaufman__triangle">
       </section>
     </main>
+
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
           <img src="./images/logo_place_footer.svg" alt="Логотип" class="logo logo_place_footer">
-          <div class="footer__author">&copy2022. Koltsov Andrey</div>
+          <div class="footer__author">&copy;2022. Koltsov Andrey</div>
         </div>
         <div class="footer__column footer__column_content_info">
           <div class="footer__column-heading">О Практикуме</div>
@@ -169,8 +171,8 @@
           </ul>
         </div>
       </div>
-
     </footer>
+
   </div>
 </body>
 
