--- a/index.html
+++ b/index.html
@@ -162,12 +162,12 @@
         <div class="footer__column footer__column_content_social">
           <div class="footer__column-heading">Соцсети</div>
           <ul class="footer__column-links">
-            <li><a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Icon Facebook"
+            <li><a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Иконка"
                   class="footer__link-icon">Facebook</a></li>
-            <li><a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="Icon ВКонтакте"
+            <li><a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="Иконка"
                   class="footer__link-icon">ВКонтакте</a></li>
             <li><a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg"
-                  alt="Icon Instagram" class="footer__link-icon">Instagram</a></li>
+                  alt="Иконка" class="footer__link-icon">Instagram</a></li>
           </ul>
         </div>
       </div>
