--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
-        <h4 class="feynman__subtitle">Выучить и не забыть.</h4>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
         <a href="#" class="feynman__link">Подробнее →</a>
         <img src="./images/feynman.png" alt="Изображение Фейнмана" class="feynman__image">
       </section>
@@ -141,7 +141,7 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <img src="./images/kaufman-triangle.svg" alt="Треугольник" class="kaufman__triangle">
+        <div class="kaufman__triangle"></div>
       </section>
     </main>
 
@@ -149,25 +149,25 @@
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
           <img src="./images/logo_place_footer.svg" alt="Логотип" class="logo logo_place_footer">
-          <div class="footer__author">&copy;2022. Koltsov Andrey</div>
+          <p class="footer__author">&copy;2022. Koltsov Andrey</p>
         </div>
-        <div class="footer__column footer__column_content_info">
-          <div class="footer__column-heading">О Практикуме</div>
+        <nav class="footer__column footer__column_content_info">
+          <h2 class="footer__column-heading">О Практикуме</h2>
           <ul class="footer__column-links">
             <li><a href="#" class="footer__column-link">Главная</a></li>
             <li><a href="#" class="footer__column-link">Концепция</a></li>
             <li><a href="#" class="footer__column-link">Наставники</a></li>
           </ul>
-        </div>
+        </nav>
         <div class="footer__column footer__column_content_social">
-          <div class="footer__column-heading">Соцсети</div>
+          <h2 class="footer__column-heading">Соцсети</h2>
           <ul class="footer__column-links">
-            <li><a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Иконка"
-                  class="footer__link-icon">Facebook</a></li>
-            <li><a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="Иконка"
-                  class="footer__link-icon">ВКонтакте</a></li>
+            <li><a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Иконка фейсбук"
+                  class="footer__social-icon">Facebook</a></li>
+            <li><a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="Иконка вконтакте"
+                  class="footer__social-icon">ВКонтакте</a></li>
             <li><a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg"
-                  alt="Иконка" class="footer__link-icon">Instagram</a></li>
+                  alt="Иконка инстаграм" class="footer__social-icon">Instagram</a></li>
           </ul>
         </div>
       </div>
