--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
 <body>
   <div class="page">
     <header class="header">
-      <img src="./images/logo_place_header.svg" alt="Логотип" class="logo logo_place_header">
+      <img src="./images/logo/logo_place_header.svg" alt="Логотип" class="logo logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
-
       <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a href="#" class="header__link">Узнать →</a>
       </p>
       <div class="header__square-pic rotation"></div>
-      <img src="./images/header-image.png" alt="Иллюстрация" class="header__main-illustration">
+      <img src="./images/header/header-image.png" alt="Иллюстрация" class="header__main-illustration">
     </header>
     
     <main class="content">
@@ -49,49 +48,47 @@
       <section class="techniques">
         <h2 class="section-title">Техники обучения</h2>
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
-        <div class="cards">
-          <div class="cards__item">
-            <img src="./images/cards-attention.png" alt="Книга в руках" class="cards__image">
+        <ul class="cards">
+          <li class="cards__item">
+            <img src="./images/cards/cards-attention.png" alt="Книга в руках" class="cards__image">
             <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
-          </div>
-          <div class="cards__item">
-            <img src="./images/cards-recall.png" alt="" class="cards__image">
+          </li>
+          <li class="cards__item">
+            <img src="./images/cards/cards-recall.png" alt="Скульптура" class="cards__image">
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
-          </div>
-          <div class="cards__item">
-            <img src="./images/cards-interliving.png" alt="" class="cards__image">
+          </li>
+          <li class="cards__item">
+            <img src="./images/cards/cards-interliving.png" alt="Большое помещения" class="cards__image">
             <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
-          </div>
-          <div class="cards__item">
-            <img src="./images/cards-question.png" alt="" class="cards__image">
+          </li>
+          <li class="cards__item">
+            <img src="./images/cards/cards-question.png" alt="Человек в большом помещении" class="cards__image">
             <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
-          </div>
-          <div class="cards__item">
-            <img src="./images/cards-competence.png" alt="" class="cards__image">
+          </li>
+          <li class="cards__item">
+            <img src="./images/cards/cards-competence.png" alt="Стопка книг на руке" class="cards__image">
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
-          </div>
-        </div>
+          </li>
+        </ul>
       </section>
 
       <section class="video">
         <h2 class="section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </section>
 
       <section class="oakley">
         <div class="two-columns">
-          <h2 class="two-columns__brief">
-            История Барбары Оакли.
-          </h2>
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">
               С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
@@ -104,7 +101,7 @@
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
         <a href="#" class="feynman__link">Подробнее →</a>
-        <img src="./images/feynman.png" alt="Изображение Фейнмана" class="feynman__image">
+        <img src="./images/feynman/feynman.png" alt="Изображение Фейнмана" class="feynman__image">
       </section>
 
       <section class="digits">
@@ -152,11 +149,13 @@
         <div class="khan__container">
           <p class="khan__author">Салман Хан</p>
           <h2 class="khan__title">Весь мир — школа</h2>
-          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <p class="khan__quote">
+            Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.
+          </p>
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Обложка книги">
+            <img class="khan__book-pic" src="./images/khan/khan-book.jpg" alt="Обложка книги">
             <a href="#" class="khan__buy-link">Купить книгу →</a>
           </div>
         </div>
@@ -208,17 +207,17 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <img class="kaufman__triangle rotation" src="./images/kaufman-triangle.svg" alt="Треугольник">
+        <img class="kaufman__triangle rotation" src="./images/kaufman/kaufman-triangle.svg" alt="Синий треугольник">
       </section>
 
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
-          <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Логотип Арзамас">
-          <img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Логотип N+1">
-          <img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Логотип Стрелка">
-          <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Логотип Плока">
+          <a href="#"><img class="resources__logo" src="./images/resources/resources-arzamas.svg" alt="Логотип Арзамас"></a>
+          <a href="#"><img class="resources__logo" src="./images/resources/resources-n1.svg" alt="Логотип Н+1"></a>
+          <a href="#"><img class="resources__logo" src="./images/resources/resources-strelka.svg" alt="Логотип Стрелка"></a>
+          <a href="#"><img class="resources__logo" src="./images/resources/resources-polka.svg" alt="Логотип Полка"></a>
         </div>
       </section>
     </main>
@@ -226,7 +225,7 @@
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <img src="./images/logo_place_footer.svg" alt="Логотип" class="logo logo_place_footer">
+          <img src="./images/logo/logo_place_footer.svg" alt="Логотип" class="logo logo_place_footer">
           <p class="footer__author">&copy;2022. Koltsov Andrey</p>
         </div>
         <nav class="footer__column footer__column_content_info">
@@ -240,11 +239,11 @@
         <div class="footer__column footer__column_content_social">
           <h2 class="footer__column-heading">Соцсети</h2>
           <ul class="footer__column-links">
-            <li><a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Иконка фейсбук"
+            <li><a href="#" class="footer__column-link"><img src="./images/footer/facebook_color_white.svg" alt="Иконка фейсбук"
                   class="footer__social-icon">Facebook</a></li>
-            <li><a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="Иконка вконтакте"
+            <li><a href="#" class="footer__column-link"><img src="./images/footer/vk_color_white.svg" alt="Иконка вконтакте"
                   class="footer__social-icon">ВКонтакте</a></li>
-            <li><a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg"
+            <li><a href="#" class="footer__column-link"><img src="./images/footer/instagram_color_white.svg"
                   alt="Иконка инстаграм" class="footer__social-icon">Instagram</a></li>
           </ul>
         </div>
